# HyperDbg

./: .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakeLists.txt.bak  CONTRIBUTING.md  CREDITS.md  Clean.bat  Counter.py  Doxyfile  Doxygen.bat  HOWTO.md  README.md  SUMMARY.md  clang-format.bat  clean.bat  counter.py  counter2.py  doxyfile  msvc-build.bat  page-2.md
.github/: git.md  (+2 more)
hyperdbg/: .clang-format  CMakeLists.txt  FindWdk.cmake  hyperdbg.sln
hyperdbg/FindWDK/: .appveyor.yml  .editorconfig  .gitignore  LICENSE  README.md
hyperdbg/FindWDK/samples/: CMakeLists.txt
hyperdbg/ScriptEngine/: ScriptEngine.sln  ScriptEngine.vcxproj  ScriptEngine.vcxproj.filters  dllmain.cpp
hyperdbg/ScriptEngine/python/: Grammer.txt
hyperdbg/ScriptEngine/src/: ScriptEngine.c  input.txt  parse_table.h  scanner.c
hyperdbg/Shared Headers/: Configuration.h  Definition.h  Definitions.h
hyperdbg/cmakeDemoTest/kernel_helloworld/: CMakeLists.txt  main.cpp  main.h
hyperdbg/cmakeDemoTest/user_helloworld/: CMakeLists.txt
hyperdbg/dependencies/libipt/: intel-pt.h
hyperdbg/dependencies/pdbex/: .editorconfig  .gitignore  LICENSE.txt  README.md  appveyor.yml  pdbex.sln
hyperdbg/enc_temp_folder/2c58d6baaa56f22871b7f4febeeb91cd/: interpreter.cpp
hyperdbg/enc_temp_folder/d49f82254be22bbefad5d9ca32df6628/: s.cpp
hyperdbg/enc_temp_folder/de6b2bda3eed67625629c91c3ab23d3/: Definition.h
hyperdbg/enc_temp_folder/ff3a611dc98b7d46bac8114d91e5288/: debugger.cpp
hyperdbg/examples/kernel/: README.md
hyperdbg/hprdbgctrl/: AsmVmxChecks.asm  Commands.h  Install.cpp  attach.cpp  bc.cpp  bd.cpp  be.cpp  bl.cpp  bp.cpp  break-control.cpp  breakcontrol.cpp  cls.cpp  commands.h  common.cpp  common.h  communication.h  connect.cpp  cpp.hint  cpu.cpp  cpuid.cpp  d-u.cpp  debug.cpp  debugger.cpp  debugger.h  detach.cpp  disassembler.cpp  disconnect.cpp  dllmain.cpp  dr.cpp  e.cpp  eptcommands.cpp  epthook.cpp  epthook2.cpp  eval.cpp  events.cpp  exception.cpp  exit.cpp  exports.h  flush.cpp  formats.cpp  (+85 more)
hyperdbg/hprdbgctrl/Header Files/: communication.h  globals.h  namedpipe.h  script-engine.h  symbol.h
hyperdbg/hprdbghv/: Apic.c  Apic.h  AsmCommon.asm  AsmDebugger.asm  AsmEpt.asm  AsmKernelSideTests.asm  AsmSegmentRegs.asm  AsmVmexitHandler.asm  AsmVmxContextState.asm  AsmVmxOperation.asm  BreakControl.c  BreakControl.h  BreakpointCommands.c  BreakpointCommands.h  Broadcast.c  Broadcast.h  Common.c  Common.h  Counters.c  Counters.h  CrossVmexits.c  Debugger.c  Debugger.h  DebuggerCommands.c  DebuggerCommands.h  DebuggerEvents.c  DebuggerEvents.h  Dpc.h  DpcRoutines.c  DpcRoutines.h  Driver.c  EFERHook.c  EferHook.c  Ept.c  Ept.h  EptHook.c  Evaluation.c  Evaluation.h  Events.c  Events.h  (+69 more)
hyperdbg/hprdbgkd/: Test.c  hprdbgkd.inf  hprdbgkd.vcxproj  hprdbgkd.vcxproj.filters
hyperdbg/hprdbgrev/: hprdbgrev.vcxproj  hprdbgrev.vcxproj.filters
hyperdbg/hprdbgrm/: hprdbgrm.vcxproj  hprdbgrm.vcxproj.filters
hyperdbg/hyperdbg-cli/: CMakeLists.txt  Cdf  details.h  hyperdbg-cli.cpp  hyperdbg-cli.vcxproj  hyperdbg-cli.vcxproj.filters  script-test-cases.txt
hyperdbg/hyperdbg-gui/: AboutWindow.Designer.cs  AboutWindow.cs  AboutWindow.resx  AttachWindow.Designer.cs  AttachWindow.cs  CommandWindow.Designer.cs  CommandWindow.cs  CommandWindow.resx  ControlMoverOrResizer.cs  DisassmblerWindow.Designer.cs  DisassmblerWindow.cs  DisassmblerWindow.resx  Form1.Designer.cs  Form1.cs  Form1.resx  MainPanel.Designer.cs  MainPanel.cs  MainPanel.resx  MemoryWindow.Designer.cs  MemoryWindow.cs  Program.cs  RecentSessions.Designer.cs  RecentSessions.cs  RegsWindow.Designer.cs  RegsWindow.cs  RegsWindow.resx  child.Designer.cs  child.cs  hyperdbg-gui.csproj
hyperdbg/hyperdbg-test/: CMakeLists.txt  NamedPipe.h  asm-test.asm  attachdetach.cpp  hyperdbg-test.cpp  hyperdbg-test.vcxproj  hyperdbg-test.vcxproj.filters  infinitethreads.asm  lookup.cpp  namedpipe.cpp  pch.cpp  pch.h  routines.h  test-cases.cpp  test-cases.txt  test-epthook.cpp  tools.cpp
hyperdbg/hyperevade/: CMakeLists.txt  hyperevade.def  hyperevade.vcxproj  hyperevade.vcxproj.filters
hyperdbg/hyperhv/: CMakeLists.txt  hyperhv.def  hyperhv.vcxproj  hyperhv.vcxproj.filters  pch.c  pch.h
hyperdbg/hyperkd/: CMakeLists.txt  hyperkd.vcxproj  hyperkd.vcxproj.filters
hyperdbg/hyperlog/: CMakeLists.txt  hyperlog.def  hyperlog.inf  hyperlog.vcxproj  hyperlog.vcxproj.filters
hyperdbg/hyperperf/: CMakeLists.txt  hyperperf.def  hyperperf.vcxproj  hyperperf.vcxproj.filters  packages.config
hyperdbg/hypertrace/: CMakeLists.txt  hypertrace.def  hypertrace.inf  hypertrace.vcxproj  hypertrace.vcxproj.filters
hyperdbg/include/: Configuration.h  Definition.h  ScriptEngineCommon.h  ScriptEngineCommonDefinitions.h  ScriptEngineEval.h  ZycoreExportConfig.h  ZydisExportConfig.h
hyperdbg/kdserial/: CMakeLists.txt  apm88xxxx.c  bcm2835.c  common.c  common.h  hardware.c  ioaccess.c  kdcom.h  kdserial.def  kdserial.rc  kdserial.vcxproj  msm8974.c  msm8x60.c  mx6uart.c  nvidia.c  omap.c  pl011.c  sam5250.c  sdm845.c  spimax311.c  uart16550.c  uartio.c  uartp.h  usif.c  win11sdk.h
hyperdbg/libhyperdbg/: CMakeLists.txt  libhyperdbg.vcxproj  libhyperdbg.vcxproj.filters  pch.cpp  pch.h  pci-id.cpp  pci-id.h  pcicam.cpp
hyperdbg/linux/: .gitignore  Contribute.md  README.md
hyperdbg/merge-dlls/: gen_test.go
hyperdbg/mergeDlls/: CMakeLists.txt  gen_test.go
hyperdbg/pdbex.vcxproj/: CMakeLists.txt
hyperdbg/script-engine/: CMakeLists.txt  ScriptEngine.c  ScriptEngine.h  ScriptEngineCommonDefinitions.h  common.c  common.h  dllmain.cpp  globals.c  globals.h  input.txt  parse-table.c  parse-table.h  parse_table.c  parse_table.h  pch.c  pch.h  scanner.c  scanner.h  script-engine.c  script-engine.h  script-engine.vcxproj  script-engine.vcxproj.filters  script_engine.c  script_engine.h  script_include.c  script_include.h
hyperdbg/script-eval/: ScriptEngineEval.c  ScriptEngineHeader.h
hyperdbg/symbol-parser/: CMakeLists.txt  common-utils.cpp  pch.cpp  pch.h  symbol-parser.cpp  symbol-parser.h  symbol-parser.vcxproj  symbol-parser.vcxproj.filters
(+2077 files in other folders)
