set(SourceFiles
    "../include/platform/user/header/Environment.h"
    "../include/platform/user/header/Windows.h"
    "header/assembler.h"
    "header/commands.h"
    "header/common.h"
    "header/communication.h"
    "header/debugger.h"
    "header/export.h"
    "header/forwarding.h"
    "header/globals.h"
    "header/help.h"
    "header/hwdbg-interpreter.h"
    "header/inipp.h"
    "header/install.h"
    "header/kd.h"
    "header/libhyperdbg.h"
    "header/list.h"
    "header/namedpipe.h"
    "header/objects.h"
    "header/pe-parser.h"
    "header/rev-ctrl.h"
    "header/script-engine.h"
    "header/symbol.h"
    "header/tests.h"
    "header/transparency.h"
    "header/ud.h"
    "pch.h"
    "../script-eval/code/Functions.c"
    "../script-eval/code/Keywords.c"
    "../script-eval/code/PseudoRegisters.c"
    "../script-eval/code/Regs.c"
    "../script-eval/code/ScriptEngineEval.c"
    "code/common/spinlock.cpp"
    "code/debugger/commands/debugging-commands/a.cpp"
    "code/debugger/commands/debugging-commands/core.cpp"
    "code/debugger/commands/debugging-commands/dt-struct.cpp"
    "code/debugger/commands/debugging-commands/gu.cpp"
    "code/debugger/commands/debugging-commands/k.cpp"
    "code/debugger/commands/debugging-commands/preactivate.cpp"
    "code/debugger/commands/debugging-commands/prealloc.cpp"
    "code/debugger/commands/extension-commands/crwrite.cpp"
    "code/debugger/commands/extension-commands/rev.cpp"
    "code/debugger/commands/extension-commands/trace.cpp"
    "code/debugger/commands/extension-commands/track.cpp"
    "code/debugger/commands/extension-commands/mode.cpp"
    "code/debugger/commands/hwdbg-commands/hw_clk.cpp"
    "code/debugger/commands/meta-commands/dump.cpp"
    "code/debugger/commands/meta-commands/kill.cpp"
    "code/debugger/commands/meta-commands/pagein.cpp"
    "code/debugger/commands/meta-commands/pe.cpp"
    "code/debugger/commands/meta-commands/restart.cpp"
    "code/debugger/commands/meta-commands/start.cpp"
    "code/debugger/commands/meta-commands/switch.cpp"
    "code/debugger/commands/meta-commands/thread.cpp"
    "code/debugger/core/break-control.cpp"
    "code/debugger/core/debugger.cpp"
    "code/debugger/core/interpreter.cpp"
    "code/debugger/kernel-level/kd.cpp"
    "code/debugger/kernel-level/kernel-listening.cpp"
    "code/debugger/misc/assembler.cpp"
    "code/debugger/misc/callstack.cpp"
    "code/debugger/misc/disassembler.cpp"
    "code/debugger/misc/readmem.cpp"
    "code/debugger/script-engine/script-engine-wrapper.cpp"
    "code/debugger/script-engine/script-engine.cpp"
    "code/debugger/script-engine/symbol.cpp"
    "code/debugger/user-level/pe-parser.cpp"
    "code/debugger/user-level/ud.cpp"
    "code/debugger/user-level/user-listening.cpp"
    "code/export/export.cpp"
    "code/hwdbg/hwdbg-interpreter.cpp"
    "code/objects/objects.cpp"
    "code/rev/rev-ctrl.cpp"
    "pch.cpp"
    "code/app/dllmain.cpp"
    "code/app/libhyperdbg.cpp"
    "code/common/common.cpp"
    "code/common/list.cpp"
    "code/debugger/commands/debugging-commands/bc.cpp"
    "code/debugger/commands/debugging-commands/bd.cpp"
    "code/debugger/commands/debugging-commands/be.cpp"
    "code/debugger/commands/debugging-commands/bl.cpp"
    "code/debugger/commands/debugging-commands/bp.cpp"
    "code/debugger/commands/debugging-commands/cpu.cpp"
    "code/debugger/commands/debugging-commands/d-u.cpp"
    "code/debugger/commands/debugging-commands/e.cpp"
    "code/debugger/commands/debugging-commands/eval.cpp"
    "code/debugger/commands/debugging-commands/events.cpp"
    "code/debugger/commands/debugging-commands/exit.cpp"
    "code/debugger/commands/debugging-commands/flush.cpp"
    "code/debugger/commands/debugging-commands/g.cpp"
    "code/debugger/commands/debugging-commands/i.cpp"
    "code/debugger/commands/debugging-commands/lm.cpp"
    "code/debugger/commands/debugging-commands/load.cpp"
    "code/debugger/commands/debugging-commands/output.cpp"
    "code/debugger/commands/debugging-commands/p.cpp"
    "code/debugger/commands/debugging-commands/pause.cpp"
    "code/debugger/commands/debugging-commands/print.cpp"
    "code/debugger/commands/debugging-commands/r.cpp"
    "code/debugger/commands/debugging-commands/rdmsr.cpp"
    "code/debugger/commands/debugging-commands/s.cpp"
    "code/debugger/commands/debugging-commands/settings.cpp"
    "code/debugger/commands/debugging-commands/sleep.cpp"
    "code/debugger/commands/debugging-commands/t.cpp"
    "code/debugger/commands/debugging-commands/test.cpp"
    "code/debugger/commands/debugging-commands/unload.cpp"
    "code/debugger/commands/debugging-commands/wrmsr.cpp"
    "code/debugger/commands/debugging-commands/x.cpp"
    "code/debugger/commands/extension-commands/cpuid.cpp"
    "code/debugger/commands/extension-commands/dr.cpp"
    "code/debugger/commands/extension-commands/epthook.cpp"
    "code/debugger/commands/extension-commands/epthook2.cpp"
    "code/debugger/commands/extension-commands/exception.cpp"
    "code/debugger/commands/extension-commands/hide.cpp"
    "code/debugger/commands/extension-commands/interrupt.cpp"
    "code/debugger/commands/extension-commands/ioin.cpp"
    "code/debugger/commands/extension-commands/ioout.cpp"
    "code/debugger/commands/extension-commands/measure.cpp"
    "code/debugger/commands/extension-commands/monitor.cpp"
    "code/debugger/commands/extension-commands/msrread.cpp"
    "code/debugger/commands/extension-commands/msrwrite.cpp"
    "code/debugger/commands/extension-commands/pa2va.cpp"
    "code/debugger/commands/extension-commands/pmc.cpp"
    "code/debugger/commands/extension-commands/pte.cpp"
    "code/debugger/commands/extension-commands/syscall-sysret.cpp"
    "code/debugger/commands/extension-commands/tsc.cpp"
    "code/debugger/commands/extension-commands/unhide.cpp"
    "code/debugger/commands/extension-commands/va2pa.cpp"
    "code/debugger/commands/extension-commands/vmcall.cpp"
    "code/debugger/commands/meta-commands/attach.cpp"
    "code/debugger/commands/meta-commands/cls.cpp"
    "code/debugger/commands/meta-commands/connect.cpp"
    "code/debugger/commands/meta-commands/debug.cpp"
    "code/debugger/commands/meta-commands/detach.cpp"
    "code/debugger/commands/meta-commands/disconnect.cpp"
    "code/debugger/commands/meta-commands/formats.cpp"
    "code/debugger/commands/meta-commands/help.cpp"
    "code/debugger/commands/meta-commands/listen.cpp"
    "code/debugger/commands/meta-commands/logclose.cpp"
    "code/debugger/commands/meta-commands/logopen.cpp"
    "code/debugger/commands/meta-commands/process.cpp"
    "code/debugger/commands/meta-commands/script.cpp"
    "code/debugger/commands/meta-commands/status.cpp"
    "code/debugger/commands/meta-commands/sym.cpp"
    "code/debugger/commands/meta-commands/sympath.cpp"
    "code/debugger/communication/forwarding.cpp"
    "code/debugger/communication/namedpipe.cpp"
    "code/debugger/communication/remote-connection.cpp"
    "code/debugger/communication/tcpclient.cpp"
    "code/debugger/communication/tcpserver.cpp"
    "code/debugger/driver-loader/install.cpp"
    "code/debugger/tests/tests.cpp"
    "code/debugger/transparency/gaussian-rng.cpp"
    "code/debugger/transparency/transparency.cpp"
    "code/assembly/asm-vmx-checks.asm"
)
include_directories(
    "../dependencies/phnt"
    "../dependencies"
    "../dependencies/zydis/dependencies/zycore/include"
    "../include"
    "../dependencies/zydis/include"
    "."
    "../script-eval"
    "../dependencies/keystone/include"
)
add_library(libhyperdbg SHARED ${SourceFiles})
